# qt-material-widgets

./: .gitignore  CMakeLists.txt  Makefile  README.md  qt-material-widgets.pro
.github/: copilot-instructions.md
Docs/: API.md  TODO.md
Docs/RelatedKnowledge/: OpaquePointer.md  QStyle.md
components/: CMakeLists.txt  components.pro  qtmaterialappbar.cpp  qtmaterialautocomplete.cpp  qtmaterialautocomplete_internal.cpp  qtmaterialavatar.cpp  qtmaterialbadge.cpp  qtmaterialcheckbox.cpp  qtmaterialcheckbox_p.h  qtmaterialcircularprogress.cpp  qtmaterialcircularprogress_internal.cpp  qtmaterialcombobox.cpp  qtmaterialcombobox_internal.cpp  qtmaterialcombobox_internal.h  qtmaterialcombobox_p.h  qtmaterialdialog.cpp  qtmaterialdialog_internal.cpp  qtmaterialdivider.cpp  qtmaterialdivider_p.h  qtmaterialdrawer.cpp  qtmaterialdrawer_internal.cpp  qtmaterialfab.cpp  qtmaterialfab_p.h  qtmaterialflatbutton.cpp  qtmaterialflatbutton_internal.cpp  qtmaterialiconbutton.cpp  qtmaterialiconbutton_p.h  qtmaterialprogress.cpp  qtmaterialradiobutton.cpp  qtmaterialradiobutton_p.h  qtmaterialraisedbutton.cpp  qtmaterialslider.cpp  qtmaterialslider_p.h  qtmaterialsteps.cpp  qtmaterialsteps_p.h  qtmaterialtabs.cpp  qtmaterialtabs_internal.cpp  qtmaterialtextfield.cpp  qtmaterialtextfield_internal.cpp  resources.qrc
components/lib/: qtmaterialcheckable.cpp  qtmaterialcheckable_internal.cpp  qtmaterialoverlaywidget.cpp  qtmaterialripple.cpp  qtmaterialrippleoverlay.cpp  qtmaterialstatetransition.cpp  qtmaterialstyle.cpp  qtmaterialtheme.cpp
components/materiallib/: qtmaterialcheckable.cpp  qtmaterialcheckable_internal.cpp  qtmaterialoverlaywidget.cpp  qtmaterialripple.cpp  qtmaterialrippleoverlay.cpp  qtmaterialstyle.cpp  qtmaterialtheme.cpp
examples/: CMakeLists.txt  appbarsettingseditor.cpp  comboboxsettingseditor.cpp  comboboxsettingseditor.h  comboboxsettingsform.ui  dialogsettingseditor.cpp  dialogsettingseditor.h  dividersettingseditor.cpp  dividersettingseditor.h  drawersettingseditor.h  examples.pro  iconbuttonsettingseditor.cpp  iconbuttonsettingseditor.h  iconbuttonsettingsform.ui  mainwindow.cpp  qrc_examples.cpp  radiobuttonsettingseditor.cpp  radiobuttonsettingseditor.h  stepssettingseditor.cpp  stepssettingseditor.h  stepssettingsform.ui  tabssettingseditor.cpp  togglesettingseditor.h
include/qmetarial/: components_global.h  qtmaterialappbar.h  qtmaterialautocomplete.h  qtmaterialavatar.h  qtmaterialbadge.h  qtmaterialcheckbox.h  qtmaterialcircularprogress.h  qtmaterialcombobox.h  qtmaterialdialog.h  qtmaterialdivider.h  qtmaterialdrawer.h  qtmaterialfab.h  qtmaterialflatbutton.h  qtmaterialiconbutton.h  qtmaterialmenu.h  qtmaterialprogress.h  qtmaterialradiobutton.h  qtmaterialraisedbutton.h  qtmaterialscrollbar.h  qtmaterialslider.h  qtmaterialsnackbar.h  qtmaterialsteps.h  qtmaterialtabs.h  qtmaterialtextfield.h  qtmaterialtoggle.h
include/qmetarial/lib/: qtmaterialcheckable.h  qtmaterialoverlaywidget.h  qtmaterialripple.h  qtmaterialrippleoverlay.h  qtmaterialstatetransition.h  qtmaterialstyle.h  qtmaterialtheme.h
